up to editorHeader

--- a/blog-frontend/src/components/editor/EditorTemplate/EditorTemplate.scss
+++ b/blog-frontend/src/components/editor/EditorTemplate/EditorTemplate.scss
@@ -4,10 +4,18 @@
     .panes {
         height: calc(100vh - 4rem);
         display: flex;
-        background: $oc-gray-1;
+        position: relative;
         .pane {
             display: flex;
-            flex: 1;
+            min-width: 0;
+            overflow: auto;
+        }
+        .separator {
+            width: 1rem;
+            height: 100%;
+            position: absolute;
+            transform: translate(-50%);
+            cursor: col-resize;
         }
     }
 }
