--- a/blog-frontend/src/components/common/PageTemplate/PageTemplate.scss
+++ b/blog-frontend/src/components/common/PageTemplate/PageTemplate.scss
@@ -1,8 +1,8 @@
-@import '../../../styles/utils.scss';
+@import 'styles/utils.scss';
 
-.page-template {  
+.page-template {
     main {
-        background: $oc-gray-1;
-        min-height: calc(100vh - 15rem);
-    } 
-}
+      background: $oc-gray-1;
+      min-height: calc(100vh - 15rem);
+    }
+  }
