--- a/blog-frontend/src/components/editor/EditorHeader/EditorHeader.scss
+++ b/blog-frontend/src/components/editor/EditorHeader/EditorHeader.scss
@@ -7,8 +7,9 @@
     padding-right: 1rem;
     display: flex;
     align-items: center;
-
-    .submit {
-        margin-left: auto;
+  
+    .submit { // 우측 정렬
+      margin-left: auto;
     }
-}
+  }
+  
