--- a/blog-frontend/src/components/list/PostList/PostList.scss
+++ b/blog-frontend/src/components/list/PostList/PostList.scss
@@ -1,49 +1,52 @@
-@import '../../../styles/utils.scss';
+@import 'styles/utils.scss';
 
 .post-list {
     .post-item {
-        padding: 1.5rem;
-        transition: all .15s ease-in;
-        h2 {
-            font-size: 2rem;
-            font-weight: 400;
-            margin: 0;
-            color: $oc-gray-8;
-            a {
-                transition: all .15 ease-in;
-                border-bottom: 1px solid transparent;
-            }
-            a:hover {
-                color: $oc-blue-6;
-                border-bottom: 1px solid $oc-blue-6;
-            }
+      padding: 1.5rem;
+      transition: all .15s ease-in;
+      h2 {
+        font-size: 2rem;
+        font-weight: 400;
+        margin: 0;
+        color: $oc-gray-8;
+        a {
+          transition: all .15s ease-in; // 스타일 바뀔 때 애니메이션 효과
+          border-bottom: 1px solid transparent;
         }
-        .date {
-            font-size: 0.85rem;
-            color: $oc-gray-5;
+        a:hover {
+          color: $oc-blue-6;
+          // 마우스 호버 시 밑줄(밑줄과 글자 사이 여백, 얇은 밑줄을 위해 border-bottom 사용)
+          border-bottom: 1px solid $oc-blue-6; 
         }
-        p {
-            font-weight: 300;
-            color: $oc-gray-7;
+      }
+      .date {
+        font-size: 0.85rem;
+        color: $oc-gray-5;
+      }
+      p {
+        font-weight: 300;
+        color: $oc-gray-7;
+      }
+      .tags {
+        font-size: 0.85rem;
+        color: $oc-blue-6;
+        a {
+          &:hover {
+            color: $oc-blue-5;
+            text-decoration: underline;
+          }
         }
-        .tags {
-            font-size: 0.85rem;
-            color: $oc-blue-6;
-            a {
-                &:hover {
-                    color: $oc-blue-5;
-                    text-decoration: underline;
-                }
-            }
-            a + a {
-                margin-left: 0.25rem;
-            }
+        a + a { // 태그 사이 여백
+          margin-left: 0.25rem;
         }
-        &:hover {
-            background: rgba($oc-blue-6, 0.05);
-        }
+      }
+      &:hover {
+        // 호버 시 배경색 변경
+        background: rgba($oc-blue-6, 0.05);
+      }
     }
-    .post-item + .post-item {
-        border-top: 1px solid $oc-gray-3;
+    .post-item + .post-item { // 아이템 사이 여백
+      border-top: 1px solid $oc-gray-3;
     }
-}
+  }
+  
